--- a/sugarProject/Pages/Login.cshtml
+++ b/sugarProject/Pages/Login.cshtml
@@ -8,21 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <script>
-    function validate(event) {
-        let isPassValid = checkPass();
-        let isEmailValid = checkEmail();
-         if (!isEmailValid || !isPassValid)
-        {
-            event.preventDefault();
-            event.stopPropagation();
-            form.classList.add("was-validated");
-        }
-        else {
-            form.classList.add("was-validated");
-        }
 
-        return isEmailValid && isPassValid;
-    }
 </script>
 <style>
 	.center {
@@ -35,7 +21,7 @@
         User
         Login
     </h3>
-    <form name="regform" method="post" onsubmit="return validate(event);"
+    <form name="regform" method="post" onsubmit="return validateForm(event);"
           onreset="resetForm();" class="needs-validation" novalidate>
         <div class="form-group">
             <label for="reg_email">Email</label>
@@ -50,7 +36,7 @@
 
         <div class="form-group">
             <label for="reg_password">Password</label>
-            <input type="password" asp-for="login_password" class="form-control"
+            <input type="text" asp-for="login_password" class="form-control"
                    id="reg_password" oninput="checkPass()" maxlength="25" required />
             <div class="invalid-feedback" id="reg_errorpass">
                 Please enter a
